--- a/index.html
+++ b/index.html
@@ -1,220 +1,168 @@
-<!DOCTYPE html>
-<html lang="pt">
+<!DOCTYPE html><html lang="pt">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Calil's Party Castle – Porto</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Calil's Party Castle Porto</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(180deg, #0a1f44, #0e3c78, #1e63c3);
+      color: white;
+      overflow-x: hidden;
+    }header {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+  position: relative;
+}
 
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+header h1 {
+  font-size: 3.5rem;
+  font-weight: 800;
+  animation: fadeDown 1.2s ease;
+}
 
-<style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
-body{scroll-behavior:smooth;background:#f9f9f9;color:#333;}
+header p {
+  font-size: 1.3rem;
+  max-width: 700px;
+  margin: 20px 0;
+  animation: fadeUp 1.5s ease;
+}
 
-/* ===== MENU FIXO ===== */
-nav{position:fixed;top:0;width:100%;background:#fff;box-shadow:0 2px 10px rgba(0,0,0,0.2);z-index:1000;display:flex;justify-content:space-between;align-items:center;padding:15px 50px;}
-nav .logo{font-size:22px;font-weight:700;color:#FF1493;}
-nav ul{display:flex;list-style:none;gap:25px;}
-nav ul li a{text-decoration:none;color:#333;font-weight:600;transition:0.3s;}
-nav ul li a:hover{color:#FF1493;}
+.btn {
+  background: #ffd700;
+  color: #0a1f44;
+  padding: 15px 35px;
+  border-radius: 40px;
+  font-weight: 600;
+  text-decoration: none;
+  transition: 0.3s;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+  animation: pulse 2s infinite;
+}
 
-/* ===== HEADER COM BANNER ANIMADO ===== */
-header{position:relative;height:500px;overflow:hidden;margin-top:70px;}
-header img{position:absolute;width:100%;height:100%;object-fit:cover;top:0;left:0;opacity:0;animation:fade 15s infinite;}
-header img:nth-child(1){animation-delay:0s;}
-header img:nth-child(2){animation-delay:5s;}
-header img:nth-child(3){animation-delay:10s;}
-@keyframes fade{0%{opacity:0;}10%{opacity:1;}33%{opacity:1;}43%{opacity:0;}100%{opacity:0;}}
-header .overlay{position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.35);display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;padding:0 20px;}
-header .overlay h1{font-size:50px;color:#fff;text-shadow:2px 2px 8px #000;}
-header .overlay p{font-size:22px;color:#fff;margin:15px 0 30px;text-shadow:1px 1px 5px #000;}
-header .overlay .btn{padding:15px 35px;background:#FF1493;color:#fff;text-decoration:none;font-weight:bold;border-radius:50px;box-shadow:0 0 15px rgba(0,0,0,0.5);transition:0.3s;}
-header .overlay .btn:hover{transform:scale(1.1);}
+.btn:hover { transform: scale(1.08); }
 
-/* ===== SEÇÕES ===== */
-section{padding:80px 20px;max-width:1200px;margin:auto;opacity:0;transform:translateY(50px);transition:1s;}
-section.show{opacity:1;transform:translateY(0);}
-h2{text-align:center;margin-bottom:50px;color:#FF1493;font-size:36px;}
+section {
+  padding: 80px 20px;
+  text-align: center;
+}
 
-/* ===== SERVIÇOS ===== */
-.services-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(300px,1fr));gap:25px;}
-.service-card{background:#fff;padding:20px;border-radius:15px;box-shadow:0 0 25px rgba(0,0,0,0.15);transition:0.5s;display:flex;flex-direction:column;align-items:center;text-align:center;}
-.service-card img{width:100%;border-radius:15px;margin-bottom:15px;transition:0.4s;}
-.service-card img:hover{transform:scale(1.05);}
-.service-card h3{color:#FF1493;margin-bottom:10px;}
-.service-card p{font-size:16px;color:#555;}
+h2 {
+  font-size: 2.5rem;
+  margin-bottom: 40px;
+}
 
-/* ===== GALERIA ===== */
-.filter-buttons{text-align:center;margin-bottom:30px;}
-.filter-buttons button{padding:10px 20px;margin:5px;border:none;background:#FFB6C1;color:#fff;font-weight:600;border-radius:30px;cursor:pointer;transition:0.3s;}
-.filter-buttons button.active, .filter-buttons button:hover{background:#FF1493;}
-.gallery{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px;}
-.gallery-item{display:block;}
-.gallery-item img{width:100%;border-radius:15px;transition:0.4s;}
-.gallery-item img:hover{transform:scale(1.08);}
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 30px;
+  max-width: 1100px;
+  margin: auto;
+}
 
-/* ===== FORMULÁRIO ===== */
-form{background:#fff;padding:30px;border-radius:15px;box-shadow:0 0 25px rgba(0,0,0,0.15);max-width:600px;margin:auto;}
-form label{display:block;margin-bottom:10px;font-weight:600;color:#FF1493;}
-form input, form select, form textarea{width:100%;padding:10px;margin-bottom:20px;border-radius:8px;border:1px solid #ccc;font-size:16px;}
-form button{background:#FF1493;color:#fff;border:none;padding:15px 25px;font-size:16px;border-radius:50px;cursor:pointer;transition:0.3s;font-weight:bold;}
-form button:hover{transform:scale(1.05);}
+.card {
+  background: rgba(255,255,255,0.1);
+  padding: 30px;
+  border-radius: 20px;
+  backdrop-filter: blur(10px);
+  transition: 0.4s;
+  box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+}
 
-/* ===== BOTÃO WHATSAPP ===== */
-.whatsapp-float{position:fixed;bottom:25px;right:25px;background:#25D366;padding:15px 25px;border-radius:50px;text-decoration:none;color:#fff;font-weight:bold;box-shadow:0 0 20px rgba(0,0,0,0.4);transition:0.3s;}
-.whatsapp-float:hover{transform:scale(1.1);}
+.card:hover {
+  transform: translateY(-10px) scale(1.03);
+}
 
-/* ===== FOOTER ===== */
-footer{background:#333;text-align:center;padding:30px;font-size:14px;color:#fff;}
-</style>
+.cta {
+  background: #ffd700;
+  color: #0a1f44;
+  padding: 80px 20px;
+}
+
+footer {
+  background: #08152d;
+  padding: 30px;
+  text-align: center;
+  font-size: 0.9rem;
+}
+
+/* Animations */
+@keyframes fadeDown {
+  from { opacity: 0; transform: translateY(-50px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+@keyframes fadeUp {
+  from { opacity: 0; transform: translateY(50px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+@keyframes pulse {
+  0% { box-shadow: 0 0 0 0 rgba(255,215,0,0.7); }
+  70% { box-shadow: 0 0 0 20px rgba(255,215,0,0); }
+  100% { box-shadow: 0 0 0 0 rgba(255,215,0,0); }
+}
+
+/* Floating balloons effect */
+.balloon {
+  position: absolute;
+  width: 60px;
+  height: 80px;
+  background: radial-gradient(circle at 30% 30%, #4da6ff, #003d99);
+  border-radius: 50%;
+  animation: float 10s infinite ease-in-out;
+  opacity: 0.4;
+}
+
+.balloon:nth-child(1) { left: 10%; top: 80%; animation-duration: 12s; }
+.balloon:nth-child(2) { left: 80%; top: 85%; animation-duration: 9s; }
+.balloon:nth-child(3) { left: 50%; top: 90%; animation-duration: 14s; }
+
+@keyframes float {
+  0% { transform: translateY(0); }
+  50% { transform: translateY(-600px); }
+  100% { transform: translateY(0); }
+}
+
+  </style>
 </head>
-
-<body>
-
-<!-- Menu fixo -->
-<nav>
-<div class="logo">Calil's Party Castle – Porto</div>
-<ul>
-<li><a href="#services">Serviços</a></li>
-<li><a href="#gallery">Galeria</a></li>
-<li><a href="#form">Orçamento</a></li>
-<li><a href="#contact">Contato</a></li>
-</ul>
-</nav>
-
-<!-- Banner -->
-<header>
-<img src="https://images.unsplash.com/photo-1616628189632-1ff2b6cc1f03" alt="">
-<img src="https://images.unsplash.com/photo-1601877426951-c84b5f64a7e4" alt="">
-<img src="https://images.unsplash.com/photo-1604152135912-04a7fe91d441" alt="">
-<div class="overlay">
-<h1>Calil's Party Castle – Porto</h1>
-<p>Balões, decoração de mesas, doces e bolos para festas inesquecíveis!</p>
-<a class="btn" href="https://wa.me/351932019126" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp: 932019126</a>
-</div>
-</header>
-
-<!-- Serviços -->
-<section id="services">
-<h2>Nossos Serviços</h2>
-<div class="services-grid">
-<div class="service-card">
-<img src="https://images.unsplash.com/photo-1604152135912-04a7fe91d441" alt="Balão Normal">
-<h3>Balão Normal</h3>
-<p>Decorações coloridas com balões de todos os tipos.</p>
-</div>
-<div class="service-card">
-<img src="https://images.unsplash.com/photo-1592201361972-bd0c9d080ab9" alt="Balão Desconstruído">
-<h3>Balão Desconstruído</h3>
-<p>Estruturas modernas e criativas para qualquer festa.</p>
-</div>
-<div class="service-card">
-<img src="https://images.unsplash.com/photo-1601877426951-c84b5f64a7e4" alt="Decoração de Mesas e Cadeiras">
-<h3>Mesas e Cadeiras</h3>
-<p>Decoração completa de mesas, cadeiras e ambiente.</p>
-</div>
-<div class="service-card">
-<img src="https://images.unsplash.com/photo-1588871821185-7e4e8916f9fc" alt="Doces">
-<h3>Doces e Bolos</h3>
-<p>Doces personalizados, brigadeiros, beijinhos e bolos decorados.</p>
-</div>
-</div>
-</section>
-
-<!-- Galeria -->
-<section id="gallery">
-<h2>Galeria de Decorações</h2>
-<div class="filter-buttons">
-<button class="active" data-filter="all">Todos</button>
-<button data-filter="balão">Balões</button>
-<button data-filter="doces">Doces</button>
-<button data-filter="mesas">Mesas</button>
-</div>
-<div class="gallery">
-<div class="gallery-item" data-category="balão"><img src="https://images.unsplash.com/photo-1604152135912-04a7fe91d441"></div>
-<div class="gallery-item" data-category="balão"><img src="https://images.unsplash.com/photo-1592201361972-bd0c9d080ab9"></div>
-<div class="gallery-item" data-category="doces"><img src="https://images.unsplash.com/photo-1588871821185-7e4e8916f9fc"></div>
-<div class="gallery-item" data-category="mesas"><img src="https://images.unsplash.com/photo-1601877426951-c84b5f64a7e4"></div>
-<div class="gallery-item" data-category="doces"><img src="https://images.unsplash.com/photo-1616628189632-1ff2b6cc1f03"></div>
-<div class="gallery-item" data-category="mesas"><img src="https://images.unsplash.com/photo-1589712232377-785fdc59c002"></div>
-</div>
-</section>
-
-<!-- Formulário -->
-<section id="form">
-<h2>Peça seu Orçamento</h2>
-<form id="orderForm">
-<label>Nome:</label><input type="text" id="name" placeholder="Seu nome" required>
-<label>Telefone/WhatsApp:</label><input type="text" id="phone" placeholder="Ex: 932019126" required>
-<label>Serviços que deseja:</label>
-<select id="servicesSelect" multiple required>
-<option>Balão Normal</option>
-<option>Estrutura de Balão Desconstruído</option>
-<option>Decoração de Mesas e Cadeiras</option>
-<option>Bolo Personalizado</option>
-<option>Doces: Brigadeiro, Beijinho, etc.</option>
-<option>Decoração completa do ambiente</option>
-</select>
-<label>Mensagem adicional:</label>
-<textarea id="message" placeholder="Ex: Festa de aniversário do meu filho..." rows="4"></textarea>
-<button type="submit">Enviar pelo WhatsApp</button>
-</form>
-</section>
-
-<!-- Contato -->
-<section id="contact">
-<h2>Contato</h2>
-<p>Estamos no Porto, Portugal</p>
-<a class="btn" href="https://wa.me/351932019126" target="_blank"><i class="fab fa-whatsapp"></i> 932019126</a>
-</section>
-
-<!-- Footer -->
-<footer>
-© 2026 Calil's Party Castle – Porto | Porto - Portugal
-</footer>
-
-<a class="whatsapp-float" href="https://wa.me/351932019126" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
-
-<script>
-// Scroll suave
-const sections = document.querySelectorAll("section");
-window.addEventListener("scroll", () => {
-sections.forEach(sec => {
-    const top = window.scrollY;
-    const offset = sec.offsetTop - 400;
-    const height = sec.offsetHeight;
-    if(top >= offset && top < offset + height){ sec.classList.add("show"); }
-});
-});
-
-// Formulário WhatsApp
-document.getElementById('orderForm').addEventListener('submit', function(e){
-e.preventDefault();
-const name = document.getElementById('name').value;
-const phone = document.getElementById('phone').value;
-const services = Array.from(document.getElementById('servicesSelect').selectedOptions).map(o=>o.value).join(', ');
-const message = document.getElementById('message').value;
-const text = `Olá! Meu nome é ${name}. Gostaria de um orçamento para os seguintes serviços: ${services}. ${message}`;
-const url = `https://wa.me/351932019126?text=${encodeURIComponent(text)}`;
-window.open(url,'_blank');
-});
-
-// Galeria filtrável
-const filterButtons = document.querySelectorAll('.filter-buttons button');
-const galleryItems = document.querySelectorAll('.gallery-item');
-filterButtons.forEach(btn=>{
-btn.addEventListener('click', ()=>{
-    filterButtons.forEach(b=>b.classList.remove('active'));
-    btn.classList.add('active');
-    const filter = btn.getAttribute('data-filter');
-    galleryItems.forEach(item=>{
-        if(filter==='all'||item.getAttribute('data-category')===filter){
-            item.style.display='block';
-        }else{item.style.display='none';}
-    });
-});
-});
-</script>
-</body>
+<body>  <header>
+    <div class="balloon"></div>
+    <div class="balloon"></div>
+    <div class="balloon"></div>
+    <h1>Calil's Party Castle Porto 🎈🏰</h1>
+    <p>Decorações com balão desconstruído, bolos personalizados, brigadeiros gourmet e mini salgados. Transformamos sua festa em um verdadeiro espetáculo no Porto.</p>
+    <a class="btn" href="https://wa.me/351932019123">📲 Fale Conosco no WhatsApp</a>
+  </header>  <section>
+    <h2>Nossos Serviços ✨</h2>
+    <div class="grid">
+      <div class="card">
+        <h3>🎈 Balão Desconstruído</h3>
+        <p>Arcos orgânicos, painéis personalizados e cenários completos com cores vibrantes e modernas.</p>
+      </div>
+      <div class="card">
+        <h3>🎂 Bolos Personalizados</h3>
+        <p>Bolos temáticos incríveis com acabamento profissional para aniversários e eventos especiais.</p>
+      </div>
+      <div class="card">
+        <h3>🍫 Doces & Mini Salgados</h3>
+        <p>Brigadeiros gourmet, doces personalizados, mini cachorro-quente e mini pães especiais.</p>
+      </div>
+    </div>
+  </section>  <section class="cta">
+    <h2>Venha Fazer Sua Festa Conosco! 🎉</h2>
+    <p>Reserve sua data agora mesmo e garanta uma decoração inesquecível.</p>
+    <br>
+    <a class="btn" href="https://wa.me/351932019123">📞 Reservar Agora</a>
+  </section>  <footer>
+    © 2026 Calil's Party Castle Porto - Porto, Portugal<br>
+    WhatsApp: +351 932 019 123
+  </footer></body>
 </html>
